
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_17__ TYPE_8__ ;
typedef struct TYPE_16__ TYPE_7__ ;
typedef struct TYPE_15__ TYPE_6__ ;
typedef struct TYPE_14__ TYPE_5__ ;
typedef struct TYPE_13__ TYPE_4__ ;
typedef struct TYPE_12__ TYPE_3__ ;
typedef struct TYPE_11__ TYPE_2__ ;
typedef struct TYPE_10__ TYPE_1__ ;


struct TYPE_17__ {int * quic; } ;
struct TYPE_10__ {int base; } ;
struct TYPE_11__ {TYPE_1__ host; } ;
struct TYPE_12__ {TYPE_2__ origin_url; } ;
struct TYPE_16__ {scalar_t__ cb; } ;
struct st_h2o_http3client_conn_t {TYPE_8__ super; TYPE_5__* ctx; int handshake_properties; TYPE_3__ server; TYPE_7__ timeout; int * getaddr_req; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef int quicly_conn_t ;
struct TYPE_15__ {int master_id; } ;
struct TYPE_14__ {TYPE_4__* http3; } ;
struct TYPE_13__ {TYPE_6__ next_cid; int quic; } ;


 int assert (int) ;
 int destroy_connection (struct st_h2o_http3client_conn_t*) ;
 int h2o_http3_send (TYPE_8__*) ;
 int h2o_http3_setup (TYPE_8__*,int *) ;
 int h2o_timer_is_linked (TYPE_7__*) ;
 scalar_t__ on_connect_timeout ;
 int ptls_iovec_init (int *,int ) ;
 int quicly_connect (int **,int ,int ,struct sockaddr*,int *,TYPE_6__*,int ,int *,int *) ;

__attribute__((used)) static void start_connect(struct st_h2o_http3client_conn_t *conn, struct sockaddr *sa, socklen_t salen)
{
    quicly_conn_t *qconn;
    int ret;

    assert(conn->super.quic == ((void*)0));
    assert(conn->getaddr_req == ((void*)0));
    assert(h2o_timer_is_linked(&conn->timeout));
    assert(conn->timeout.cb == on_connect_timeout);


    if ((ret = quicly_connect(&qconn, conn->ctx->http3->quic, conn->server.origin_url.host.base, sa, ((void*)0),
                              &conn->ctx->http3->next_cid, ptls_iovec_init(((void*)0), 0), &conn->handshake_properties, ((void*)0))) != 0) {
        conn->super.quic = ((void*)0);
        goto Fail;
    }
    ++conn->ctx->http3->next_cid.master_id;
    if ((ret = h2o_http3_setup(&conn->super, qconn)) != 0)
        goto Fail;

    h2o_http3_send(&conn->super);

    return;
Fail:
    destroy_connection(conn);
}
